--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nanostores/react": "github:ai/react",
+    "ai": "^2.2.21",
     "firebase": "^10.5.2",
     "next": "14.0.1",
+    "next-ai": "^0.0.0",
+    "openai": "^4.17.0",
     "react": "^18",
     "react-dom": "^18"
   },
