--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@nanostores/react": "github:ai/react",
     "ai": "^2.2.21",
     "firebase": "^10.5.2",
+    "flowbite": "^2.1.1",
+    "flowbite-react": "^0.6.4",
     "next": "14.0.1",
     "next-ai": "^0.0.0",
     "openai": "^4.17.0",
