--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nanostores/react": "github:ai/react",
     "ai": "^2.2.21",
+    "create-eslint": "^0.0.0",
     "firebase": "^10.5.2",
     "flowbite": "^2.1.1",
     "flowbite-react": "^0.6.4",
@@ -25,9 +26,12 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "eslint": "^8.54.0",
     "eslint-config-next": "14.0.1",
+    "eslint-plugin-react": "^7.33.2",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
