--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nanostores/react": "github:ai/react",
     "ai": "^2.2.21",
     "create-eslint": "^0.0.0",
+    "dotenv": "^16.3.1",
     "firebase": "^10.5.2",
     "flowbite": "^2.1.1",
     "flowbite-react": "^0.6.4",
